# translate-pretrain-corpus

./: distilabel-trans.py  load_ds.py  main.py  my-basic-distilabel-pipe.py  my-openai.py  openai.py  pyproject.toml  split_and_upload_arxiv.py  test.py  wds-single.py  wds.py
