[project]
name = "translate-pretrain-corpus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "datasets>=3.6.0",
    "distilabel[openai]>=1.5.3",
    "hf-transfer>=0.1.9",
    "hf-xet>=1.1.3",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
]
