[project]
name = "translate-pretrain-corpus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "datasets>=3.6.0",
    "distilabel[openai,ray]>=1.5.3",
    "dotenv>=0.9.9",
    "hf-transfer>=0.1.9",
    "hf-xet>=1.1.3",
    "openai>=1.86.0",
    "pillow>=11.2.1",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
